test/files/neg/noMember1.check
noMember1.scala:1: error: object MultiMap is not a member of package collection.mutable
Note: trait MultiMap exists, but it has no companion object.
import scala.collection.mutable.MultiMap._
                                ^
one error found
